--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
   <div id="frame-box">
     <iframe
-      src="https://docs.google.com/spreadsheets/d/15KcUk2EmTfuEzxtvHK8wNXlcxv5htuh_/edit?gid=109737191#gid=109737191">
+      src="https://docs.google.com/spreadsheets/d/15KcUk2EmTfuEzxtvHK8wNXlcxv5htuh_/edit?gid=109737191#gid=109737191&rm=minimal">
     </iframe>
   </div>
 
