--- a/index.html
+++ b/index.html
@@ -2,186 +2,35 @@
 <html lang="pt-BR">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Status</title>
-
-  <style>
-    html, body {
-      margin: 0;
-      padding: 0;
-      width: 100%;
-      height: 100%;
-      background: #1e1e1e;
-      font-family: Arial, sans-serif;
-      overflow: hidden;
-      color: #fff;
-    }
-
-    /* ===== MENU ===== */
-    #menu {
-      display: grid;
-      grid-template-columns: 1fr;
-      gap: 8px;
-      padding: 8px;
-      height: 100%;
-      box-sizing: border-box;
-      overflow-y: auto;
-    }
-
-    .char {
-      background: #2a2a2a;
-      border-radius: 6px;
-      padding: 6px;
-    }
-
-    .char-title {
-      text-align: center;
-      font-weight: bold;
-      margin-bottom: 6px;
-      font-size: 14px;
-    }
-
-    .buttons {
-      display: flex;
-      gap: 6px;
-    }
-
-    button {
-      flex: 1;
-      padding: 6px;
-      font-size: 12px;
-      cursor: pointer;
-      border: none;
-      border-radius: 4px;
-      background: #444;
-      color: #fff;
-    }
-
-    button:hover {
-      background: #666;
-    }
-
-    /* ===== VIEWER ===== */
-    #viewer {
-      display: none;
-      width: 100%;
-      height: 100%;
-    }
-
-    #topbar {
-      height: 32px;
-      background: #111;
-      display: flex;
-      align-items: center;
-      padding: 0 6px;
-      box-sizing: border-box;
-    }
-
-    #topbar button {
-      font-size: 12px;
-      padding: 4px 8px;
-    }
-
-    iframe {
-      width: 100%;
-      height: calc(100% - 32px);
-      border: none;
-    }
-
-    /* ===== MOBILE AJUSTES ===== */
-    @media (max-width: 600px) {
-      .char-title {
-        font-size: 13px;
-      }
-
-      button {
-        font-size: 11px;
-      }
-    }
-  </style>
+  <link rel="stylesheet" href="style.css" />
 </head>
-
 <body>
 
-  <!-- ===== MENU INICIAL ===== -->
-  <div id="menu">
+  <!-- BOTÕES -->
+  <div id="buttons">
+    <button onclick="openSheet('https://docs.google.com/spreadsheets/d/15KcUk2EmTfuEzxtvHK8wNXlcxv5htuh_/edit?gid=1636579447')">
+      Boiye – Aba 1
+    </button>
 
-    <!-- BOIYE -->
-    <div class="char">
-      <div class="char-title">Boiye</div>
-      <div class="buttons">
-        <button onclick="openSheet(1636579447)">Ficha</button>
-        <button onclick="openSheet(46550939)">Status</button>
-      </div>
-    </div>
-
-    <!-- PERSONAGEM 2 (placeholder) -->
-    <div class="char">
-      <div class="char-title">Personagem 2</div>
-      <div class="buttons">
-        <button onclick="openSheet(0)">Ficha</button>
-        <button onclick="openSheet(0)">Status</button>
-      </div>
-    </div>
-
-    <!-- PERSONAGEM 3 (placeholder) -->
-    <div class="char">
-      <div class="char-title">Personagem 3</div>
-      <div class="buttons">
-        <button onclick="openSheet(0)">Ficha</button>
-        <button onclick="openSheet(0)">Status</button>
-      </div>
-    </div>
-
-    <!-- PERSONAGEM 4 (placeholder) -->
-    <div class="char">
-      <div class="char-title">Personagem 4</div>
-      <div class="buttons">
-        <button onclick="openSheet(0)">Ficha</button>
-        <button onclick="openSheet(0)">Status</button>
-      </div>
-    </div>
-
-    <!-- PERSONAGEM 5 (placeholder) -->
-    <div class="char">
-      <div class="char-title">Personagem 5</div>
-      <div class="buttons">
-        <button onclick="openSheet(0)">Ficha</button>
-        <button onclick="openSheet(0)">Status</button>
-      </div>
-    </div>
-
+    <button onclick="openSheet('https://docs.google.com/spreadsheets/d/15KcUk2EmTfuEzxtvHK8wNXlcxv5htuh_/edit?gid=46550939')">
+      Boiye – Aba 2
+    </button>
   </div>
 
-  <!-- ===== VISUALIZAÇÃO ===== -->
-  <div id="viewer">
-    <div id="topbar">
-      <button onclick="backToMenu()">⬅ Voltar</button>
-    </div>
-    <iframe id="sheetFrame"></iframe>
+  <!-- IFRAME -->
+  <div id="frameWrapper">
+    <iframe
+      id="sheetFrame"
+      src=""
+      frameborder="0"
+      allowfullscreen
+    ></iframe>
   </div>
 
   <script>
-    const SHEET_ID = "15KcUk2EmTfuEzxtvHK8wNXlcxv5htuh_";
-
-    function openSheet(gid) {
-      if (!gid || gid === 0) {
-        alert("GID ainda não configurado.");
-        return;
-      }
-
-      const url =
-        `https://docs.google.com/spreadsheets/d/${SHEET_ID}/edit?gid=${gid}`;
-
+    function openSheet(url) {
       document.getElementById("sheetFrame").src = url;
-      document.getElementById("menu").style.display = "none";
-      document.getElementById("viewer").style.display = "block";
-    }
-
-    function backToMenu() {
-      document.getElementById("sheetFrame").src = "";
-      document.getElementById("viewer").style.display = "none";
-      document.getElementById("menu").style.display = "grid";
     }
   </script>
 
