--- a/index.html
+++ b/index.html
@@ -1,15 +1,189 @@
-#frameWrapper {
-  width: 100%;
-  height: 100%;
-  overflow: hidden;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
+<!DOCTYPE html>
+<html lang="pt-BR">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Status</title>
 
-#frameWrapper iframe {
-  transform: scale(0.8);        /* 🔑 ZOOM OUT */
-  transform-origin: top left;
-  width: 125%;                  /* 1 / 0.8 */
-  height: 125%;
-}
+  <style>
+    html, body {
+      margin: 0;
+      padding: 0;
+      width: 100%;
+      height: 100%;
+      background: #1e1e1e;
+      font-family: Arial, sans-serif;
+      overflow: hidden;
+      color: #fff;
+    }
+
+    /* ===== MENU ===== */
+    #menu {
+      display: grid;
+      grid-template-columns: 1fr;
+      gap: 8px;
+      padding: 8px;
+      height: 100%;
+      box-sizing: border-box;
+      overflow-y: auto;
+    }
+
+    .char {
+      background: #2a2a2a;
+      border-radius: 6px;
+      padding: 6px;
+    }
+
+    .char-title {
+      text-align: center;
+      font-weight: bold;
+      margin-bottom: 6px;
+      font-size: 14px;
+    }
+
+    .buttons {
+      display: flex;
+      gap: 6px;
+    }
+
+    button {
+      flex: 1;
+      padding: 6px;
+      font-size: 12px;
+      cursor: pointer;
+      border: none;
+      border-radius: 4px;
+      background: #444;
+      color: #fff;
+    }
+
+    button:hover {
+      background: #666;
+    }
+
+    /* ===== VIEWER ===== */
+    #viewer {
+      display: none;
+      width: 100%;
+      height: 100%;
+    }
+
+    #topbar {
+      height: 32px;
+      background: #111;
+      display: flex;
+      align-items: center;
+      padding: 0 6px;
+      box-sizing: border-box;
+    }
+
+    #topbar button {
+      font-size: 12px;
+      padding: 4px 8px;
+    }
+
+    iframe {
+      width: 100%;
+      height: calc(100% - 32px);
+      border: none;
+    }
+
+    /* ===== MOBILE AJUSTES ===== */
+    @media (max-width: 600px) {
+      .char-title {
+        font-size: 13px;
+      }
+
+      button {
+        font-size: 11px;
+      }
+    }
+  </style>
+</head>
+
+<body>
+
+  <!-- ===== MENU INICIAL ===== -->
+  <div id="menu">
+
+    <!-- BOIYE -->
+    <div class="char">
+      <div class="char-title">Boiye</div>
+      <div class="buttons">
+        <button onclick="openSheet(1636579447)">Ficha</button>
+        <button onclick="openSheet(46550939)">Status</button>
+      </div>
+    </div>
+
+    <!-- PERSONAGEM 2 (placeholder) -->
+    <div class="char">
+      <div class="char-title">Personagem 2</div>
+      <div class="buttons">
+        <button onclick="openSheet(921267563)">Ficha</button>
+        <button onclick="openSheet(64554907)">Status</button>
+      </div>
+    </div>
+
+    <!-- PERSONAGEM 3 (placeholder) -->
+    <div class="char">
+      <div class="char-title">Personagem 3</div>
+      <div class="buttons">
+        <button onclick="openSheet(1268377012)">Ficha</button>
+        <button onclick="openSheet(1098209164)">Status</button>
+      </div>
+    </div>
+
+    <!-- PERSONAGEM 4 (placeholder) -->
+    <div class="char">
+      <div class="char-title">Personagem 4</div>
+      <div class="buttons">
+        <button onclick="openSheet(1130374802)">Ficha</button>
+        <button onclick="openSheet(1341454747)">Status</button>
+      </div>
+    </div>
+
+    <!-- PERSONAGEM 5 (placeholder) -->
+    <div class="char">
+      <div class="char-title">Personagem 5</div>
+      <div class="buttons">
+        <button onclick="openSheet(798455952)">Ficha</button>
+        <button onclick="openSheet(969457394)">Status</button>
+      </div>
+    </div>
+
+  </div>
+
+  <!-- ===== VISUALIZAÇÃO ===== -->
+  <div id="viewer">
+    <div id="topbar">
+      <button onclick="backToMenu()">⬅ Voltar</button>
+    </div>
+    <iframe id="sheetFrame"></iframe>
+  </div>
+
+  <script>
+    const SHEET_ID = "15KcUk2EmTfuEzxtvHK8wNXlcxv5htuh_";
+
+    function openSheet(gid) {
+      if (!gid || gid === 0) {
+        alert("GID ainda não configurado.");
+        return;
+      }
+
+      const url =
+        `https://docs.google.com/spreadsheets/d/${SHEET_ID}/edit?gid=${gid}`;
+
+      document.getElementById("sheetFrame").src = url;
+      document.getElementById("menu").style.display = "none";
+      document.getElementById("viewer").style.display = "block";
+    }
+
+    function backToMenu() {
+      document.getElementById("sheetFrame").src = "";
+      document.getElementById("viewer").style.display = "none";
+      document.getElementById("menu").style.display = "grid";
+    }
+  </script>
+
+</body>
+</html>
