--- a/index.html
+++ b/index.html
@@ -119,8 +119,8 @@
     <div class="char">
       <div class="char-title">Personagem 2</div>
       <div class="buttons">
-        <button onclick="openSheet(921267563)">Ficha</button>
-        <button onclick="openSheet(64554907)">Status</button>
+        <button onclick="openSheet(0)">Ficha</button>
+        <button onclick="openSheet(0)">Status</button>
       </div>
     </div>
 
@@ -128,8 +128,8 @@
     <div class="char">
       <div class="char-title">Personagem 3</div>
       <div class="buttons">
-        <button onclick="openSheet(1268377012)">Ficha</button>
-        <button onclick="openSheet(1098209164)">Status</button>
+        <button onclick="openSheet(0)">Ficha</button>
+        <button onclick="openSheet(0)">Status</button>
       </div>
     </div>
 
@@ -137,8 +137,8 @@
     <div class="char">
       <div class="char-title">Personagem 4</div>
       <div class="buttons">
-        <button onclick="openSheet(1130374802)">Ficha</button>
-        <button onclick="openSheet(1341454747)">Status</button>
+        <button onclick="openSheet(0)">Ficha</button>
+        <button onclick="openSheet(0)">Status</button>
       </div>
     </div>
 
@@ -146,8 +146,8 @@
     <div class="char">
       <div class="char-title">Personagem 5</div>
       <div class="buttons">
-        <button onclick="openSheet(798455952)">Ficha</button>
-        <button onclick="openSheet(969457394)">Status</button>
+        <button onclick="openSheet(0)">Ficha</button>
+        <button onclick="openSheet(0)">Status</button>
       </div>
     </div>
 
