--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
 
     <!-- PERSONAGEM 2 -->
     <div class="char">
-      <div class="char-title">Personagem x</div>
+      <div class="char-title">Personagem y</div>
       <div class="buttons">
         <button onclick="openSheet(921267563)">Ficha</button>
         <button onclick="openSheet(64554907)">Status</button>
